@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

title US023 -  As a Team Member i want to add a story from the productbacklog to the sprintbacklog

class AddUserStoryUI {
}

class AddUserStoryController {
    +getProject(String code)
    +getSprintStore()
    +getSprint()
    +getUserStoryStore()
    +addUserStoryToSprintBacklog(int userStoryId)
}

class Company {
    -projectList : ProjectStore
    +getProjectStore()
}

class ProjectStore {
-projectList : List<Project>
+getProjectByCode(String code)
}

class SprintStore {
-sprintList: List<Sprint>
}

class Sprint {
-id_sprint : int
}

class Project {
-code : String
-productBacklog : ProductBacklog
+getUserStoryStore()
}

class ProductBacklog {
-userStoryList : List<UserStory>
}

class SprintBacklog {
-userStoryList : List<UserStory>
}

class UserStory {
- id_UserStory : int
}

AddUserStoryUI ..> AddUserStoryController

AddUserStoryController ..> Company
AddUserStoryController ..> Project
AddUserStoryController ..> SprintStore
AddUserStoryController ..> ProductBacklog
AddUserStoryController ..> Sprint

Company "1" *-- "1" ProjectStore: has
ProjectStore "1" *-- "0..*" Project: has
Project "1" *-- "1" SprintStore: has
Project "1" *-- "1" ProductBacklog: has
ProductBacklog "1" *-- "0..*" UserStory: has
SprintStore "1" *-- "0..*" Sprint: has
Sprint "1" *-- "1" SprintBacklog: has
SprintBacklog "1" o-- "0..*" UserStory: has

@enduml